Se realiza configuración del servicio a la db

--- a/Modelos/Modelos.csproj
+++ b/Modelos/Modelos.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContenedorLoginDTO.cs" />
     <Compile Include="LoginUsuarioDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
