--- a/WcfGeolocaliza/bin/WcfGeolocaliza.dll.config
+++ b/WcfGeolocaliza/bin/WcfGeolocaliza.dll.config
@@ -8,6 +8,9 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
+	<connectionStrings>
+        <add name="dbConnString" connectionString="Server=168.197.69.84,3009;Initial Catalog=PlantillaSS;Persist Security Info=False;User ID=NT_LoginS;Password=InvePass2018;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
