--- a/Modelos/Modelos.csproj
+++ b/Modelos/Modelos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ContenedorLoginDTO.cs" />
     <Compile Include="LoginUsuarioDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReporteHuecoDTO.cs" />
     <Compile Include="ResetPassDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
