--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -77,6 +77,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\DataSources\Modelos.ContenedorLoginDTO.datasource" />
+    <None Include="Properties\DataSources\Modelos.ReporteHuecoDTO.datasource" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\srvGeoLocalizacion\" />
